log
Fri 21 Apr 2023 07:06:02 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
97b76af
Fri 21 Apr 2023 07:35:42 PM UTC: 
 treemap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
f1e2aae
Fri 21 Apr 2023 07:37:55 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
9c59bce
Sun 23 Apr 2023 03:41:03 AM UTC: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  13|5
total_score: 25/70
5188998
Sun 23 Apr 2023 03:44:19 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
f762fbe
Sun 23 Apr 2023 03:44:39 AM UTC: 
 treemap.c | 44 ++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 44 insertions(+)
 tests:  17|4
total_score: 35/70
16a5c02
Sun 23 Apr 2023 03:45:12 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  18|3
total_score: 40/70
27863ec
Sun 23 Apr 2023 03:45:51 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  22|2
total_score: 50/70
cc5b86e
Sun 23 Apr 2023 03:46:22 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
c5b69e6
Sun 23 Apr 2023 03:52:38 AM UTC: 
 treemap.c | 18 ------------------
 1 file changed, 18 deletions(-)
 tests:  24|1
total_score: 55/70
8a3e6ac
Sun 23 Apr 2023 03:53:03 AM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:220:1: error: control reaches end of non-void function [-Werror=return-type]
  220 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e9ed2c7
Sun 23 Apr 2023 03:53:12 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
1d00728
